# dail_tracker

./: ._BASE_4210.gitignore.swp  ._BASE_4421.gitignore.swp  ._LOCAL_4210.gitignore.swp  ._LOCAL_4421.gitignore.swp  ._REMOTE_4210.gitignore.swp  ._REMOTE_4421.gitignore.swp  .dockerignore  .gitattributes  .gitignore  .gitignore.swp  .impeccable.md  .mcp.json  CLA.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  DATA_LIMITATIONS.md  Dockerfile  NOTICE.md  PRODUCT.md  README.MD  REARCHITECTURE.md  REORG_AUDIT.md  _BACKUP_4421.gitignore  _BASE_4210.gitignore  _REMOTE_4421.gitignore  analytics_loading.py  attendance.py  attendance_2024.py  attendance_refresh.py  bill_amendments_flatten.py  bills_by_td-REVISE.py  bills_by_td.py  bootstrap_refresh.py  charity_enriched.py  charity_normalise.py  charity_resolved.py  committees_long_format_etl.py  config.py  config_dummy.py  (+84 more)
.DONTREADclaude/: claude_tips.txt
.basedpyright/: baseline.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.streamlit/: config.toml
CRO/: INTEGRATION_PLAN.md
api/: __init__.py  deps.py  main.py
attendance/: __init__.py  attendance.py
audit_screenshots/: _appointments_smoke.py  _attendance_capture.py  _award_detail_check.py  _award_detail_drilldowns_check.py  _banner_home_link_check.py  _banner_latency_check.py  _banner_nav_snapshot.py  _capture.py  _capture_poc.py  _clutter_validate.py  _clutter_validate2.py  _committees_capture.py  _corporate_smoke.py  _council_capture.py  _dead_link_audit.py  _dead_link_sweep.py  _dump_profile.py  _expenses_lens_check.py  _filterbar_compare.py  _filterbar_validate.py  _fix_verify.py  _impact_probe.py  _impeccable_capture.py  _interests_capture.py  _journalist_5min_test.py  _journalist_6_final.py  _journalist_6_stories.py  _journalist_6b_deeper.py  _jud_audit_capture.py  _jud_ld_capture.py  _jud_p1fix_capture.py  _jud_persona_verify.py  _jud_scroll.py  _judiciary_capture.py  _legislation_capture.py  _legislation_verify.py  _lobbying_capture.py  _lobbying_poc_capture.py  _lobbying_poc_verify.py  _lobbying_pol_card_probe.py  (+55 more)
avatar/: wikidata.model
charity/: __init__.py  charity_enriched.py  charity_normalise.py  charity_resolved.py
committees/: __init__.py  committees_long_format_etl.py
corporate/: __init__.py  cro_normalise.py  cro_poller.py
dail_tracker_bold_ui_contract_pack_v5/: AGENT_SETUP.md  INTEGRATION_GUIDE.md  README.md
dail_tracker_core/: __init__.py  attendance.py  buyer_xref.py  caveats.py  connections.py  db.py  dossiers.py  qs_valuation.py  results.py  serialize.py
dail_tracker_streamlit_ai_contract_pack/: AGENT_SETUP.md  README.md
debates/: __init__.py  akn_harvest.py  dbsect_listings_flatten.py  speech_parse.py  speeches_gold.py
deploy/: fly.toml.example
doc/: AFS_LIFT_PLAN.md  AGENT_CUSTOMIZATION_PLAN.md  AI_AGENT_EFFICIENCY_RESEARCH_PROMPT.md  AI_CONTEXT_OPTIMISATION_PLAN.md  API_LAYER_PLAN.md  API_PROVENANCE_REVIEW.md  APP_REDESIGN_BRIEF.md  APP_REDESIGN_PHASE0.md  APP_UI_SWEEP_AUDIT.md  ATTENDANCE_AUDIT.md  ATTENDANCE_PARTICIPATION_REDESIGN.md  BID_INTELLIGENCE_PACK_ENGINE.md  BI_SPINOUT_ARCHITECTURE.md  BI_SPINOUT_BLIND_SPOTS.md  BI_SPINOUT_FABLE_ASSESSMENT.md  BI_SPINOUT_STAGE_AB_PLAN.md  BUYER_DOSSIER_DESIGN.md  CBI_SECOND_PASS_REVIEW.md  CICD_TODO.md  CITATION_AND_DATA_PLAN.md  CI_CD.md  COMMERCIALISATION_PLAN.md  COMMERCIAL_UPLIFT_PLAN.md  COMMITTEES_AUDIT.md  COMMUNICATION_STYLE.md  COMPANY_CORPORATE_MERGE_PLAN.md  COMPETITIVE_LANDSCAPE.md  CONTINUOUS_REFRESH.md  COUNCIL_TARGETING_FABLE_ASSESSMENT.md  CPI_DEFLATOR_PLAN.md  CRO_FINANCIAL_STATEMENTS_EXPLORATION.md  CUSTOM_DOMAIN_CLOUDFLARE.md  CUSTOM_DOMAIN_REDIRECT.md  DATA_BACKUP.md  DATA_DISTRIBUTION_PLAN.md  DATA_GRAINS.md  DATA_LIMITATIONS.md  DATA_MAP.md  DATA_QUALITY_AUDIT.md  DIARY_GAZETTEER_CANDIDATES.md  (+145 more)
experimental/: test_read_scan_pdf.py
extractors/: _diary_minister.py  _gnews_resolve.py  _judiciary_roster.py  _paid_flag_clean.py  _publisher_regime.py  _sipo_candidate_watchdog.py  _sipo_donations_watchdog.py  _sipo_items_watchdog.py  _sipo_queue.py  _sipo_watchdog.py  afs_amalgamated_extract.py  build_part4_no_ocr.py  cbi_registers_extract.py  census_saps_land_extract.py  committee_evidence_promote_gold.py  committee_witnesses_extract.py  corporate_receiver_enrich.py  councillors_promote_to_gold.py  cro_corporate_xref_enrichment.py  cro_financial_statements_extract.py  cso_pxstat_extract.py  derelict_sites_levy_extract.py  diary_build_ocr_queue.py  diary_company_influence.py  diary_entry_classify.py  diary_grid_parse.py  diary_lobbying_overlap.py  diary_merge_depts.py  diary_ocr.py  diary_org_match.py  diary_promote_gold.py  disclosed_bq_po_extract.py  disclosed_bq_po_newbodies_extract.py  enrichment_promote_to_gold.py  entity_xref_build.py  epa_promote_to_gold.py  etenders_live_tenders_extract.py  housing_construction_pipeline_extract.py  ipas_promote_to_gold.py  ipas_sources.py  (+64 more)
iris/: __init__.py  corporate_notices_enrichment.py  iris_archive_backfill.py  iris_incremental_shards.py  iris_oifigiuil_etl_polars.py  iris_si_bill_enrichment.py  iris_silver_rebuild.py  public_appointments_enrichment.py  si_entity_enrichment.py
legal/: COMMERCIAL_LICENCE_AGREEMENT_TEMPLATE.md  TRADEMARK_FILING_CHECKLIST.md  TRADEMARK_POLICY.md  website_licensing_page.md
legislation/: __init__.py  bill_amendments_flatten.py  legislation.py  questions.py
lobbying/: __init__.py  lobby_processing.py  lobbying_pdf_extract.py
lobbyist/: test.py
logs/: latest_run_id.txt  pq_full_run.log.err
mcp_server/: __init__.py  code_index.py  qs_valuation.py  server.py  sql_index.py  ted_conduit.py
members/: aggregated_payment_tables.csv  aggregated_td_tables.csv  flatten_members_json_to_csv.py  historic_members_build.py  member_interests.py  member_interests_supplements.py  members_api_service.py  td_tables.csv  test.py
memory/: feedback_pipeline_changes_data_anchored_promotion.md  project_election_2024_hub.md  project_logic_firewall_graduation_2026_06_20.md  project_payments_award_linkage_2026_06_15.md  project_pipeline_sandbox_rule.md
payments/: __init__.py  (+2 more)
(+2823 files in other folders)
