[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dail-tracker"
version = "0.1.0"
description = "Civic data pipeline for Irish parliamentary transparency — attendance, payments, lobbying, legislation, and member interests from the Oireachtas"
readme = "README.MD"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "peweet" },
]
keywords = ["oireachtas", "dail", "lobbying", "civic-tech", "ireland", "transparency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Sociology",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# ── Core dependencies ────────────────────────────────────────────────────────
# These are the packages the pipeline imports across the codebase.
# UI-only deps (streamlit/altair/plotly/duckdb) live in the [ui] extra to keep
# pipeline-only installs lean.
# Transitive deps (certifi, urllib3, charset-normalizer, etc.) are handled
# automatically by the resolver — don't pin them here.
dependencies = [
    "polars>=1.39",
    "pandas>=2.2,<3.1",
    "numpy>=2.0",
    "PyMuPDF>=1.25",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "flatten-json>=0.1.14",
    "jsonschema>=4.0,<5",  # validate-at-fetch of Oireachtas API envelopes (services/schema_validation.py)
]

[project.urls]
Repository = "https://github.com/peweet/dail_tracker"
Issues = "https://github.com/peweet/dail_tracker/issues"

# ── Optional dependency groups ───────────────────────────────────────────────
# Install with: pip install -e ".[ocr]" or pip install -e ".[dev]" etc.
[project.optional-dependencies]

# OCR pipeline for scanned PDFs (read_scan_pdf.py)
ocr = [
    "ocrmypdf>=17.0",
]

# Streamlit dashboard runtime — used by utility/app.py and every page under
# utility/pages_code/. Streamlit Cloud installs from requirements.txt at the
# repo root; this extra is the source of truth for local dashboard runs.
ui = [
    "streamlit>=1.50,<2",
    "altair>=6.0,<7",
    "plotly>=6.0,<7",
    "duckdb>=1.4,<2",
]

# Development and testing
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "responses>=0.25",  # HTTP mocking for tests of services/http_engine.py and API scrapers
    "duckdb>=1.4,<2",   # test_sql_views.py and test_gold_df.py register views via DuckDB
]

# Everything — for a full local setup
all = [
    "dail-tracker[ocr,ui,dev]",
]

# ── Script entry points ──────────────────────────────────────────────────────
# After `pip install -e .` you can run these directly from the command line:
#   dail-members        → fetch member data from API
#   dail-attendance     → extract attendance from PDFs
#   dail-payments       → extract payment data from PDFs
#   dail-enrich         → join attendance + member metadata
#   dail-lobbying       → clean and process lobbying CSVs
#   dail-interests      → extract member interests from PDF
#   dail-endpoints      → health-check all PDF/API URLs
#
# TODO: each script currently executes on import (no __main__ guard in most).
# Wrap the top-level logic in a main() function so these entry points work
# cleanly. Example for oireachtas_api_service.py:
#
#   def main():
#       member_api_request()
#       for scenario in ["legislation", "questions"]:
#           urls = construct_urls_for_api(scenario)
#           results = fetch_all(urls)
#           save_results(results, scenario)
#
# Until then, you can still run scripts directly: python oireachtas_api_service.py

[project.scripts]
dail-pipeline = "pipeline:main"
# dail-members    = "oireachtas_api_service:main"
# dail-attendance = "attendance:main"
# dail-payments   = "payments:main"
# dail-enrich     = "enrich:main"
# dail-lobbying   = "lobbying_processing:main"
# dail-interests  = "member_interest:main"
# dail-endpoints  = "pdf_enpoint_check:main"

# ── Tool configuration ───────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modernise syntax)
    "B",    # flake8-bugbear (common gotchas)
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long — let the formatter handle it
]

[tool.ruff.lint.isort]
known-first-party = ["utility", "normalise_join_key"]

[tool.ruff.lint.per-file-ignores]
# sys.path.insert before local imports is required in Streamlit page files
"utility/pages_code/*.py" = ["E402", "I001"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]

# Only files/dirs that actually exist on disk — `uv build` validates each entry.
# Top-level standalone scripts (payments_full_psa_etl.py, oireachtas_pdf_poller.py
# etc.) are run via subprocess from pipeline.py, not imported, so they don't
# need to be in the wheel for the pipeline to work after `pip install`. Add new
# entries only when the corresponding file is imported as a library.
[tool.hatch.build.targets.wheel]
packages = [
    "utility",
    "services",
    "config.py",
    "pipeline.py",
    "normalise_join_key.py",
    "attendance.py",
    "enrich.py",
    "lobby_processing.py",
    "member_interests.py",
    "members_api_service.py",
    "questions.py",
    "legislation.py",
    "transform_votes.py",
    "manifest.py",
    "oireachtas_pdf_poller.py",
    "payments_full_psa_etl.py",
    "flatten_members_json_to_csv.py",
]
