[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dail-tracker"
version = "0.1.0"
description = "Civic data pipeline for Irish parliamentary transparency — attendance, payments, lobbying, legislation, and member interests from the Oireachtas"
readme = "README.MD"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Patrick Glynn" },
]
keywords = ["oireachtas", "dail", "lobbying", "civic-tech", "ireland", "transparency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Sociology",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# ── Core dependencies = the deployed app's runtime ───────────────────────────
# Streamlit Community Cloud installs the project from uv.lock by running
# `uv sync`, which installs ONLY this core set — optional-dependencies extras
# are NOT synced by default (https://docs.astral.sh/uv/concepts/projects/sync/).
# So every package the deployed app (utility/app.py + pages_code/*) imports MUST
# live here. Pipeline/ETL-only deps live in the [pipeline] extra to keep the
# Cloud install lean. Transitive deps (certifi, urllib3, pytz, …) are resolved
# automatically — don't pin them here.
dependencies = [
    "streamlit>=1.50,<2",
    "altair>=6.0,<7",
    "plotly>=6.0,<7",
    "duckdb>=1.4,<2",
    "pandas>=3.0.3,<4.0",  # capped <3.0 for launch: pandas 3.0 + plotly 6.7 has an import-order pd.Series bug; revisit post-launch
    "numpy>=2.0",
    "pyarrow>=14",       # duckdb/pandas parquet I/O for the gold/silver reads
]

[project.urls]
Repository = "https://github.com/peweet/dail_tracker"
Issues = "https://github.com/peweet/dail_tracker/issues"

# ── Optional dependency extras ───────────────────────────────────────────────
# Extras are published in package metadata and are the home for OPTIONAL RUNTIME
# capability sets (the data-build pipeline, OCR). The deployed Streamlit app
# needs none of them. Install with `uv sync --extra pipeline` (or `--all-extras`),
# or `pip install -e ".[pipeline]"`. Dev/test TOOLING is NOT here — it lives in
# the [dependency-groups] dev group below, so it never ships to Streamlit Cloud.
[project.optional-dependencies]

# Pipeline / ETL — extraction, enrichment, API + PDF ingestion. NOT imported by
# the deployed Streamlit app, so kept out of core to keep the Cloud `uv sync`
# lean.
pipeline = [
    "polars>=1.39,!=1.41.0",  # 1.41.0 (+ polars-runtime-32) was yanked upstream
    "PyMuPDF>=1.25",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "flatten-json>=0.1.14",
    "jsonschema>=4.0,<5",  # validate-at-fetch of Oireachtas API envelopes (services/schema_validation.py)
    "orjson>=3.9",         # fast JSON read/write in manifest.py, members_api_service.py, member_interests.py, wiki_data.py
    "regex>=2023.0",       # \p{Lu} unicode-property patterns in member_interests.py (stdlib re can't do these)
    "openpyxl>=3.1",       # charity_normalise.py reads the Charities Register .xlsx via load_workbook
    "xlrd>=2.0",           # legacy .xls reader (pre-2021 OPW/LA payment quarterlies are .xls; openpyxl is .xlsx-only)
]

# OCR pipeline for scanned PDFs (read_scan_pdf.py)
ocr = [
    "ocrmypdf>=17.0",
]

# Siting Check (Product B) — the live geospatial planning-risk engine in
# dail_tracker_core.siting. NOT in core: the deployed Streamlit app guards its
# import (utility/app.py) and the 291 MB designation layers + DEM are local-only
# (gitignored), so Cloud runs without these. Battle-tested locally via
# `uv sync --extra siting`. shapely = point-in-polygon joins; rasterio = DEM
# range-read; pyyaml = issue catalogue; polars = layer parquet reads.
siting = [
    "shapely>=2.0",
    "rasterio>=1.3",
    "pyyaml>=6.0",
    "polars>=1.39,!=1.41.0",
]

# Headless-browser scraping for JS-rendered sources that curl/RSS can't reach:
# the live national tender pipeline (extractors/etenders_live_tenders_extract.py) and
# the lobbying.ie fallback. Kept out of `pipeline` so the standard ETL run stays
# browser-free; the daily live-tenders GitHub Action installs this + the chromium binary.
scrape = [
    "playwright>=1.40",
]

# Read-only JSON API over the Streamlit-free core (dail_tracker_core). Optional:
# the deployed Streamlit app does NOT import these, so they stay out of the lean
# Cloud `uv sync`. Run the API with `uv sync --extra api` then `uvicorn api.main:app`.
api = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30",
]

# MCP server (mcp_server/server.py) — stdio tools over the same Streamlit-free
# core. Optional: neither the app nor the API imports it. Run with
# `uv sync --extra mcp` then `./.venv/Scripts/python.exe mcp_server/server.py`.
mcp = [
    "mcp>=1.20,<2",
]

# Everything installable as an EXTRA — a full optional-runtime local setup.
# Dev/test tooling is intentionally excluded (it's the dev group, not an extra).
# Full local dev env (runtime + pipeline + tooling):
#   uv sync --extra pipeline --extra ocr --extra api --group dev
all = [
    "dail-tracker[ocr,pipeline,scrape,api,mcp]",
]

# ── Dependency groups (PEP 735) ──────────────────────────────────────────────
# Dev/test/lint/typecheck/audit TOOLING. Two reasons this is a dependency-group,
# not an extra:
#   1. Groups are NOT published in package metadata — tooling never leaks into
#      anything that installs the package.
#   2. With `[tool.uv] default-groups = []` below, a bare `uv sync` (which is
#      what Streamlit Cloud runs from uv.lock) installs ONLY the core runtime —
#      never pytest/ruff/basedpyright. This is what keeps the Cloud image lean.
# The test suite imports the pipeline/ETL modules, so the FULL dev/CI environment
# is `core + pipeline extra + dev group`:
#   uv sync --extra pipeline --group dev        # = CI's full lane
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "responses>=0.25",        # HTTP mocking for tests of services/http_engine.py and API scrapers
    "pandera[polars]>=0.20",  # DataFrameModel schema checks (import pandera.polars) in the silver/gold tests
    "hypothesis>=6.100",      # property-based fuzzing of the data_contracts engine (uses polars.testing.parametric)
    "basedpyright>=1.39",     # scoped static type-checking on the API/JSON boundary (see [tool.basedpyright])
    "pip-audit>=2.7",         # supply-chain CVE audit — run in .github/workflows/audit.yml
]

# ── Script entry points ──────────────────────────────────────────────────────
# After `pip install -e .` you can run these directly from the command line:
#   dail-members        → fetch member data from API
#   dail-attendance     → extract attendance from PDFs
#   dail-payments       → extract payment data from PDFs
#   dail-enrich         → join attendance + member metadata
#   dail-lobbying       → clean and process lobbying CSVs
#   dail-interests      → extract member interests from PDF
#   dail-endpoints      → health-check all PDF/API URLs
#
# TODO: each script currently executes on import (no __main__ guard in most).
# Wrap the top-level logic in a main() function so these entry points work
# cleanly. Example for oireachtas_api_service.py:
#
#   def main():
#       member_api_request()
#       for scenario in ["legislation", "questions"]:
#           urls = construct_urls_for_api(scenario)
#           results = fetch_all(urls)
#           save_results(results, scenario)
#
# Until then, you can still run scripts directly: python oireachtas_api_service.py

[project.scripts]
dail-pipeline = "pipeline:main"
# dail-members    = "oireachtas_api_service:main"
# dail-attendance = "attendance:main"
# dail-payments   = "payments:main"
# dail-enrich     = "enrich:main"
# dail-lobbying   = "lobbying_processing:main"
# dail-interests  = "member_interest:main"
# dail-endpoints  = "pdf_enpoint_check:main"

# ── Tool configuration ───────────────────────────────────────────────────────

[tool.uv]
# Keep `uv sync` lean by default: install ONLY the core runtime unless a group is
# explicitly requested. uv's built-in default would auto-install the `dev` group;
# emptying default-groups means Streamlit Cloud's `uv sync` (run from uv.lock)
# installs the deployed-app runtime and NOT the dev tooling. CI opts into the
# group explicitly with `--group dev`; the requirements.txt export below relies
# on this too (no default group → app-runtime-only export).
default-groups = []

[tool.ruff]
target-version = "py312"
line-length = 120
# Throwaway / scratch trees: one-off Playwright capture harnesses and
# pipeline experiments that aren't shipped code. Linting them buries real
# app/pipeline findings under hundreds of capture-script semicolon warnings.
extend-exclude = [
    "audit_screenshots",
    "pipeline_sandbox",
    "experimental",
    "tmp",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modernise syntax)
    "B",    # flake8-bugbear (common gotchas)
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long — let the formatter handle it
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency/parameter markers are call-in-default by design — the
# idiomatic pattern across api/routers/*. Allowlist them so B008 doesn't fire on
# every endpoint signature.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Header", "fastapi.Body"]

[tool.ruff.lint.isort]
known-first-party = ["utility", "shared"]

[tool.ruff.lint.per-file-ignores]
# sys.path.insert before local imports is required in Streamlit page files
"utility/pages_code/*.py" = ["E402", "I001"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]

# ── basedpyright (scoped static type-checking) ───────────────────────────────
# Deliberately NOT repo-wide. Type-checking pays off on the API/JSON boundary
# (services/ + the pure-logic modules), where a wrong type is a real latent bug
# — it already caught a null-resultCount crash in legislation_unscoped and a
# lying `-> dict` return in members.py. It does NOT pay off on the pandas/polars
# transform code, where every dataframe op degrades to Unknown/Any and would
# bury real findings under hundreds of "partially unknown type" warnings.
#
# `[tool.basedpyright]` (not `[tool.pyright]`) is read only by basedpyright, so
# the IDE's stock Pylance/pyright is unaffected. typeCheckingMode="standard"
# keeps wrong-type / bad-operator / bad-return checks and drops the Unknown
# family. The scoped tree is currently clean (0 errors), so CI fails on any new
# type error. If a future stub false-positive appears and can't be annotated
# away, snapshot it with `uv run basedpyright --writebaseline` (creates
# basedpyright-baseline.json) rather than loosening a rule repo-wide.
# Run locally:  uv run basedpyright
[tool.basedpyright]
include = [
    "services",
    "shared/normalise_join_key.py",
    "config.py",
    "manifest.py",
    # Already type-clean ETL scripts — costless to guard against future regressions.
    "votes/enrich.py",
    "votes/transform_votes.py",
    "legislation/questions.py",
    # Streamlit-free core: the API/JSON boundary the type-checker pays off on.
    # Added at creation so it starts (and stays) clean; NEVER widen to the
    # pandas-heavy pipeline scripts (they degrade to Unknown and bury findings).
    "dail_tracker_core",
    # The FastAPI exposition layer — typed request/response boundary; start clean.
    "api",
]
# Resolve third-party imports (polars/pandas/requests) from the uv-managed venv,
# deterministically, in both local runs and CI (`uv sync` creates ./.venv).
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "standard"

# Only files/dirs that actually exist on disk — `uv build` validates each entry.
# Top-level standalone scripts (payments_full_psa_etl.py, oireachtas_pdf_poller.py
# etc.) are run via subprocess from pipeline.py, not imported, so they don't
# need to be in the wheel for the pipeline to work after `pip install`. Add new
# entries only when the corresponding file is imported as a library.
[tool.hatch.build.targets.wheel]
packages = [
    "utility",
    "services",
    "shared",
    "config.py",
    "pipeline.py",
    "attendance",
    "votes",
    "lobbying",
    "members",
    "legislation",
    "manifest.py",
    "pdf_infra",
    "payments",
    "dail_tracker_core",
]
