[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dail-tracker"
version = "0.1.0"
description = "Civic data pipeline for Irish parliamentary transparency — attendance, payments, lobbying, legislation, and member interests from the Oireachtas"
readme = "README.MD"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Patrick Glynn" },
]
keywords = ["oireachtas", "dail", "lobbying", "civic-tech", "ireland", "transparency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Sociology",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# ── Core dependencies = the deployed app's runtime ───────────────────────────
# Streamlit Community Cloud installs the project from uv.lock by running
# `uv sync`, which installs ONLY this core set — optional-dependencies extras
# are NOT synced by default (https://docs.astral.sh/uv/concepts/projects/sync/).
# So every package the deployed app (utility/app.py + pages_code/*) imports MUST
# live here. Pipeline/ETL-only deps live in the [pipeline] extra to keep the
# Cloud install lean. Transitive deps (certifi, urllib3, pytz, …) are resolved
# automatically — don't pin them here.
dependencies = [
    "streamlit>=1.59.2,<2",
    "altair>=6.2.2,<7",
    "plotly>=6.9.0,<7",
    "duckdb>=1.5.4,<2",
    "pandas>=2.2,<3.0",  # capped <3.0 for launch: pandas 3.0 + plotly 6.7 has an import-order pd.Series bug; revisit post-launch
    "numpy>=2.5.1",
    "pyarrow>=14",       # duckdb/pandas parquet I/O for the gold/silver reads
]

[project.urls]
Repository = "https://github.com/peweet/dail_tracker"
Issues = "https://github.com/peweet/dail_tracker/issues"

# ── Optional dependency extras ───────────────────────────────────────────────
# Extras are published in package metadata and are the home for OPTIONAL RUNTIME
# capability sets (the data-build pipeline, OCR). The deployed Streamlit app
# needs none of them. Install with `uv sync --extra pipeline` (or `--all-extras`),
# or `pip install -e ".[pipeline]"`. Dev/test TOOLING is NOT here — it lives in
# the [dependency-groups] dev group below, so it never ships to Streamlit Cloud.
[project.optional-dependencies]

# Pipeline / ETL — extraction, enrichment, API + PDF ingestion. NOT imported by
# the deployed Streamlit app, so kept out of core to keep the Cloud `uv sync`
# lean.
pipeline = [
    "polars!=1.41.0,>=1.42.1",  # 1.41.0 (+ polars-runtime-32) was yanked upstream
    "PyMuPDF>=1.25",
    "requests>=2.31",
    "beautifulsoup4>=4.15.0",
    "flatten-json>=0.1.14",
    "jsonschema>=4.0,<5",  # validate-at-fetch of Oireachtas API envelopes (services/schema_validation.py)
    "orjson>=3.9",         # fast JSON read/write in manifest.py, members_api_service.py, member_interests.py, wiki_data.py
    "regex>=2026.7.19",       # \p{Lu} unicode-property patterns in member_interests.py (stdlib re can't do these)
    "openpyxl>=3.1",       # charity_normalise.py reads the Charities Register .xlsx via load_workbook
    "xlrd>=2.0",           # legacy .xls reader (pre-2021 OPW/LA payment quarterlies are .xls; openpyxl is .xlsx-only)
]

# OCR pipeline for scanned PDFs (read_scan_pdf.py)
ocr = [
    "ocrmypdf>=17.8.1",
]

# Siting Check (Product B) — the live geospatial planning-risk engine in
# dail_tracker_core.siting. NOT in core: the deployed Streamlit app guards its
# import (utility/app.py) and the 291 MB designation layers + DEM are local-only
# (gitignored), so Cloud runs without these. Battle-tested locally via
# `uv sync --extra siting`. shapely = point-in-polygon joins; rasterio = DEM
# range-read; pyyaml = issue catalogue; polars = layer parquet reads.
siting = [
    "shapely>=2.0",
    "rasterio>=1.3",
    "pyyaml>=6.0",
    "polars!=1.41.0,>=1.42.1",
]

# Headless-browser scraping for JS-rendered sources that curl/RSS can't reach:
# the live national tender pipeline (extractors/etenders_live_tenders_extract.py) and
# the lobbying.ie fallback. Kept out of `pipeline` so the standard ETL run stays
# browser-free; the daily live-tenders GitHub Action installs this + the chromium binary.
scrape = [
    "playwright>=1.61.0",
]

# Read-only JSON API over the Streamlit-free core (dail_tracker_core). Optional:
# the deployed Streamlit app does NOT import these, so they stay out of the lean
# Cloud `uv sync`. Run the API with `uv sync --extra api` then `uvicorn api.main:app`.
api = [
    "fastapi>=0.139.2,<1",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0,<3",  # dail_tracker_core.models.* (BillDossier/DivisionDossier/MemberDossier) import it directly; api/routers/* are the only consumers. Declared explicitly here rather than relying on fastapi to pull it transitively.
]

# MCP server (mcp_server/server.py) — stdio tools over the same Streamlit-free
# core. Optional: neither the app nor the API imports it. Run with
# `uv sync --extra mcp` then `./.venv/Scripts/python.exe mcp_server/server.py`.
mcp = [
    "mcp>=1.28.1,<2",
]

# Everything installable as an EXTRA — a full optional-runtime local setup.
# Dev/test tooling is intentionally excluded (it's the dev group, not an extra).
# Full local dev env (runtime + pipeline + tooling):
#   uv sync --extra pipeline --extra ocr --extra api --group dev
all = [
    "dail-tracker[ocr,pipeline,scrape,api,mcp]",
]

# ── Dependency groups (PEP 735) ──────────────────────────────────────────────
# Dev/test/lint/typecheck/audit TOOLING. Two reasons this is a dependency-group,
# not an extra:
#   1. Groups are NOT published in package metadata — tooling never leaks into
#      anything that installs the package.
#   2. With `[tool.uv] default-groups = []` below, a bare `uv sync` (which is
#      what Streamlit Cloud runs from uv.lock) installs ONLY the core runtime —
#      never pytest/ruff/basedpyright. This is what keeps the Cloud image lean.
# The test suite imports the pipeline/ETL modules, so the FULL dev/CI environment
# is `core + pipeline extra + dev group`:
#   uv sync --extra pipeline --group dev        # = CI's full lane
[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5.0",
    "ruff>=0.15.22",
    "responses>=0.26.2",        # HTTP mocking for tests of services/http_engine.py and API scrapers
    "pandera[polars]>=0.20",  # DataFrameModel schema checks (import pandera.polars) in the silver/gold tests
    "hypothesis>=6.157.0",      # property-based fuzzing of the data_contracts engine (uses polars.testing.parametric)
    "basedpyright>=1.39.9",     # scoped static type-checking on the API/JSON boundary (see [tool.basedpyright])
    "pip-audit>=2.10.1",         # supply-chain CVE audit — run in .github/workflows/audit.yml
    "ast-grep-cli>=0.44",     # structural code search — find real call-sites/usages before a signature change or convention audit (grep can't tell a call from a comment); NOT a grep replacement, see cheap-code-scanning memory
    "deptry>=0.20",           # undeclared/transitive dependency audit — a bare `uv sync` installs ONLY core, so an app-path import that's merely transitive is a latent Cloud crash. Config + rationale for every ignore in [tool.deptry].
]

# ── Script entry points ──────────────────────────────────────────────────────
# After `pip install -e .` you can run these directly from the command line:
#   dail-members        → fetch member data from API
#   dail-attendance     → extract attendance from PDFs
#   dail-payments       → extract payment data from PDFs
#   dail-enrich         → join attendance + member metadata
#   dail-lobbying       → clean and process lobbying CSVs
#   dail-interests      → extract member interests from PDF
#   dail-endpoints      → health-check all PDF/API URLs
#
# TODO: each script currently executes on import (no __main__ guard in most).
# Wrap the top-level logic in a main() function so these entry points work
# cleanly. Example for oireachtas_api_service.py:
#
#   def main():
#       member_api_request()
#       for scenario in ["legislation", "questions"]:
#           urls = construct_urls_for_api(scenario)
#           results = fetch_all(urls)
#           save_results(results, scenario)
#
# Until then, you can still run scripts directly: python oireachtas_api_service.py

[project.scripts]
dail-pipeline = "pipeline:main"
# dail-members    = "oireachtas_api_service:main"
# dail-attendance = "attendance:main"
# dail-payments   = "payments:main"
# dail-enrich     = "enrich:main"
# dail-lobbying   = "lobbying_processing:main"
# dail-interests  = "member_interest:main"
# dail-endpoints  = "pdf_enpoint_check:main"

# ── Tool configuration ───────────────────────────────────────────────────────

[tool.uv]
# Keep `uv sync` lean by default: install ONLY the core runtime unless a group is
# explicitly requested. uv's built-in default would auto-install the `dev` group;
# emptying default-groups means Streamlit Cloud's `uv sync` (run from uv.lock)
# installs the deployed-app runtime and NOT the dev tooling. CI opts into the
# group explicitly with `--group dev`; the requirements.txt export below relies
# on this too (no default group → app-runtime-only export).
default-groups = []

[tool.ruff]
target-version = "py312"
line-length = 120
# Throwaway / scratch trees: one-off Playwright capture harnesses and
# pipeline experiments that aren't shipped code. Linting them buries real
# app/pipeline findings under hundreds of capture-script semicolon warnings.
extend-exclude = [
    "audit_screenshots",
    "pipeline_sandbox",
    "experimental",
    "tmp",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modernise syntax)
    "B",    # flake8-bugbear (common gotchas)
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long — let the formatter handle it
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency/parameter markers are call-in-default by design — the
# idiomatic pattern across api/routers/*. Allowlist them so B008 doesn't fire on
# every endpoint signature.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
    # Our parameterized pagination dependency factory (api/deps.py) — same
    # call-in-default idiom as Depends itself.
    "api.deps.pagination",
    "pagination",
]

[tool.ruff.lint.isort]
known-first-party = ["utility", "shared"]

[tool.ruff.lint.per-file-ignores]
# sys.path.insert before local imports is required in Streamlit page files
"utility/pages_code/*.py" = ["E402", "I001"]

# ── deptry (undeclared-dependency audit) ─────────────────────────────────────
# Why it earns a slot: a bare `uv sync` installs ONLY the core runtime, so any
# app-path module that imports a package which is merely TRANSITIVE is a latent
# Cloud ImportError waiting on an upstream dep drop. deptry caught exactly that
# (pydantic, imported directly by dail_tracker_core.models.*, declared nowhere,
# present only because fastapi dragged it in — now explicit in the api extra).
# Run:  uv run deptry .
#
# EVERY ignore below is justified. Do not add one to silence a finding you have
# not explained — an unexplained ignore turns this tool into decoration.
[tool.deptry]
extend_exclude = ["pipeline_sandbox", "experimental", "tmp", "audit_screenshots"]
# Standalone repo scripts imported by module name (extractors/ siblings run via
# subprocess from pipeline.py, plus utility/ UI modules). They are first-party
# files, not PyPI packages — deptry can't tell because they aren't a package.
known_first_party = [
    "_invariants", "_publisher_regime", "accommodation_spend", "afs_amalgamated_extract",
    "check_gold_quality", "company", "cro_corporate_xref_enrichment",
    "cro_financial_statements_extract", "data_access", "derelict_sites_levy_extract",
    "enrichment_promote_to_gold", "epa_promote_to_gold", "extract", "follow_the_money",
    "freshness_heartbeat", "ipas_sources", "judiciary", "judiciary_bench_extract",
    "la_afs_extract", "la_budgets_extract", "legal_diary_extract",
    "lgas_audit_reports_extract", "ministerial_briefs_extract",
    "noac_collection_rates_extract", "noac_indicators_long_extract",
    "noac_scorecard_extract", "noac_scorecard_history_extract",
    "opr_plan_directions_extract", "pages_code", "per_member_search", "procurement",
    "procurement_etenders_extract", "procurement_hse_tusla_parser",
    "procurement_la_payments_extract", "procurement_la_seed",
    "procurement_payments_consolidate", "procurement_public_body_extract",
    "procurement_publishers_seed", "public_appointments", "public_payments",
    "sample_extract_procurement_pdf", "shared_css", "si_legislation_directory_extract",
    "si_lrc_classlist_extract", "sipo_candidate_expenses_aggregate",
    "sipo_candidate_expenses_extract", "sipo_expense_items_paddle_etl",
    "sipo_expenses_paddle_etl", "sipo_promote_to_gold", "stateboards_roster_extract",
    "statutory_instruments", "test_silver_layer", "ui",
]

[tool.deptry.per_rule_ignores]
# DEP001 — imported but not declared, DELIBERATELY:
#   camelot: runs in an ISOLATED venv ($AFS_CAMELOT_VENV, subprocess-invoked from
#   la_afs_extract.py:64-72). Kept OUT of this venv on purpose — it avoids the
#   opencv/cv2 clash that would break SIPO OCR, and is best-effort (absent venv →
#   those councils skip, the fitz fact still ships). NEVER add it to an extra.
DEP001 = ["camelot"]
# DEP002 — declared but "unused": all three are correct declarations deptry can't see.
#   uvicorn/ocrmypdf are CLI-invoked (`uvicorn api.main:app`), never imported;
#   dail-tracker is the `all` extra's self-reference.
#   flatten-json: real consumer is pipeline_sandbox/historic_members/historic_member_pull.py,
#   which extend_exclude skips — declared correctly, just invisible to the scan.
# NOT ignored: `regex` — it has ZERO imports repo-wide (sandbox included) and its
# declaration comment cites a member_interests.py that no longer exists. Left visible
# as a genuine stale-dependency decision, not silenced.
DEP002 = ["dail-tracker", "ocrmypdf", "uvicorn", "flatten-json"]
# DEP003 — imported directly but only transitive. Ignored ONLY where guaranteed or
# deliberate:
#   paddleocr: GPU-only, install is manual/isolated by design (crashes local CPU box).
#   dateutil:  guaranteed present — pandas (a core dep) requires python-dateutil.
#   httpx:     lazily imported inside tools/siting_loadtest.py precisely to keep that
#              module import-dependency-free; not a runtime path.
# NOT ignored (genuine open items, left visible on purpose): pypdf, esridump.
DEP003 = ["paddleocr", "dateutil", "httpx"]
# DEP004 — dev deps imported in test/. Correct: this repo's test root is `test/`
# (singular), which deptry does not treat as a dev context by default.
DEP004 = ["hypothesis", "pandera", "pytest", "responses"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]

# ── Coverage (a RATCHET, not a target) ───────────────────────────────────────
# `source` is an explicit list of the shipped trees, NOT ".", so throwaway trees
# (pipeline_sandbox/, experimental/, tmp/, audit_screenshots/) can never dilute the
# number — they're excluded by omission, and a sandbox script landing at 0% must not
# be able to drag the floor down and mask a real regression in shipped code.
#
# The floor exists to stop BACKSLIDE, not to claim the suite is well covered. It sits a
# few points under the measured figure so routine churn doesn't flap the build. Coverage
# here is very uneven by layer and that's deliberate: the serving/core layer is well
# covered (api ~92%, dail_tracker_core ~82%, services ~74%) while the ingest layer is
# thin (extractors ~32%, iris ~28%). RAISE the floor when a tree is genuinely improved;
# never lower it to make a red build go green.
[tool.coverage.run]
source = [
    "api", "attendance", "charity", "committees", "corporate", "dail_tracker_core",
    "debates", "extractors", "iris", "legislation", "lobbying", "mcp_server", "members",
    "payments", "pdf_infra", "reference", "services", "shared", "tools", "utility",
    "votes", "wikidata", "pipeline.py", "config.py", "manifest.py",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

# ── basedpyright (scoped static type-checking) ───────────────────────────────
# Deliberately NOT repo-wide. Type-checking pays off on the API/JSON boundary
# (services/ + the pure-logic modules), where a wrong type is a real latent bug
# — it already caught a null-resultCount crash in legislation_unscoped and a
# lying `-> dict` return in members.py. It does NOT pay off on the pandas/polars
# transform code, where every dataframe op degrades to Unknown/Any and would
# bury real findings under hundreds of "partially unknown type" warnings.
#
# `[tool.basedpyright]` (not `[tool.pyright]`) is read only by basedpyright, so
# the IDE's stock Pylance/pyright is unaffected. typeCheckingMode="standard"
# keeps wrong-type / bad-operator / bad-return checks and drops the Unknown
# family. The scoped tree is currently clean (0 errors), so CI fails on any new
# type error. If a future stub false-positive appears and can't be annotated
# away, snapshot it with `uv run basedpyright --writebaseline` (creates
# basedpyright-baseline.json) rather than loosening a rule repo-wide.
# Run locally:  uv run basedpyright
[tool.basedpyright]
include = [
    "services",
    "shared/normalise_join_key.py",
    "config.py",
    "manifest.py",
    # Already type-clean ETL scripts — costless to guard against future regressions.
    "votes/enrich.py",
    "votes/transform_votes.py",
    "legislation/questions.py",
    # Streamlit-free core: the API/JSON boundary the type-checker pays off on.
    # Added at creation so it starts (and stays) clean; NEVER widen to the
    # pandas-heavy pipeline scripts (they degrade to Unknown and bury findings).
    "dail_tracker_core",
    # The FastAPI exposition layer — typed request/response boundary; start clean.
    "api",
]
# Resolve third-party imports (polars/pandas/requests) from the uv-managed venv,
# deterministically, in both local runs and CI (`uv sync` creates ./.venv).
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "standard"

# Only files/dirs that actually exist on disk — `uv build` validates each entry.
# Top-level standalone scripts (payments_full_psa_etl.py, oireachtas_pdf_poller.py
# etc.) are run via subprocess from pipeline.py, not imported, so they don't
# need to be in the wheel for the pipeline to work after `pip install`. Add new
# entries only when the corresponding file is imported as a library.
[tool.hatch.build.targets.wheel]
packages = [
    "utility",
    "services",
    "shared",
    "config.py",
    "pipeline.py",
    "attendance",
    "votes",
    "lobbying",
    "members",
    "legislation",
    "manifest.py",
    "pdf_infra",
    "payments",
    "dail_tracker_core",
]
